add_definitions(-DGAMEDLL)

# Add to our library.
add_library(game.a STATIC
	../botai/ai_chat.c
	../botai/ai_cmd.c
	../botai/ai_dmnet.c
	../botai/ai_dmq3.c
	../botai/ai_main.c
	../botai/ai_team.c 
	ai_cast.c
	ai_cast_characters.c
	ai_cast_debug.c
	ai_cast_events.c
	ai_cast_fight.c
	ai_cast_func_attack.c
	ai_cast_func_boss1.c
	ai_cast_funcs.c
	ai_cast_script.c
	ai_cast_script_actions.c
	ai_cast_script_ents.c
	ai_cast_sight.c
	ai_cast_think.c
	bg_animation.c
	bg_misc.c
	bg_pmove.c
	bg_slidemove.c
	g_active.c
	g_alarm.c
	g_bot.c
	g_client.c
	g_cmds.c
	g_combat.c
	g_items.c
	g_main.c
	g_mem.c
	g_misc.c
	g_missile.c
	g_mover.c
	g_props.c
	g_save.c
	g_script.c
	g_script_actions.c
	g_session.c
	g_spawn.c
	g_static.c
	g_svcmds.c
	g_target.c
	g_team.c
	g_tramcar.c
	g_trigger.c
	g_utils.c
	g_weapon.c
	../ui/ui_atoms.c
	../ui/ui_gameinfo.c
	../ui/ui_main.c
	../ui/ui_players.c
	../ui/ui_shared.c
	../ui/ui_util.c
	../cgame/cg_consolecmds.c
	../cgame/cg_draw.c
	../cgame/cg_drawtools.c
	../cgame/cg_effects.c
	../cgame/cg_ents.c
	../cgame/cg_event.c
	../cgame/cg_flamethrower.c
	../cgame/cg_info.c
	../cgame/cg_localents.c
	../cgame/cg_main.c
	../cgame/cg_marks.c
	../cgame/cg_newDraw.c
	../cgame/cg_particles.c
	../cgame/cg_players.c
	../cgame/cg_playerstate.c
	../cgame/cg_predict.c
	../cgame/cg_scoreboard.c
	../cgame/cg_servercmds.c
	../cgame/cg_snapshot.c
	../cgame/cg_sound.c
	../cgame/cg_static.c
	../cgame/cg_trails.c
	../cgame/cg_view.c
	../cgame/cg_weapons.c
	../cgame/cg_static.c
)
target_link_libraries(game.a m)
set_target_properties(game.a PROPERTIES PREFIX "" SUFFIX "")
